@@ -1,0 +1,1 @@
+replacement log file line #1
